k8s/base/http/badia-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: badia-proxy-service
  namespace: http
spec:
  ports:
    - protocol: TCP
      port: 1313
      targetPort: 1313
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: badia-proxy-service
  namespace: http
subsets:
  - addresses:
      - ip: 192.168.178.60
    ports:
      - port: 1313
