k8s/base/http/badia-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: badia-proxy-ingress
  namespace: http
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-office"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - badia.nicolatomassoni.it
      secretName: badia-proxy-tls
  rules:
  - host: "badia.nicolatomassoni.it"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: badia-proxy-service
            port:
              number: 1313
